--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Docker Build
-        run: docker build -t ${{ secrets.DOCKER_USER }}/mobile-user:latest .
+        run: docker build -t ${{ secrets.DOCKER_USER }}/mobile-consumption:latest .
 
       - name: Upload container to Docker Hub with Push
-        run: docker push ${{ secrets.DOCKER_USER }}/mobile-user:latest
+        run: docker push ${{ secrets.DOCKER_USER }}/mobile-consumption:latest
