--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.data.mongodb.host= ${MONGODB_HOST:mongo}
 spring.data.mongodb.port= ${MONGODB_PORT:27017}
+spring.data.mongodb.uri= ${MONGODB_HOST:mongo}
 
 server.port=8052
